--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -12,20 +12,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/constraintCart"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recyclerViewCart"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
 
-        android:layout_marginTop="20sp"
-        android:text=" items"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
+        <TextView
         android:id="@+id/textSub"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,7 +64,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintEmptyCart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
 
         <ImageView
