--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -9,8 +9,10 @@
     android:layout_marginBottom="0sp"
     tools:context=".Catalog">
 
-    <EditText
-        android:id="@+id/editText"
+
+
+    <SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Поиск"
@@ -21,8 +23,9 @@
         android:id="@+id/categoryRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintStart_toStartOf="@+id/searchView"
+        app:layout_constraintTop_toBottomOf="@+id/searchView"
+        android:layout_marginBottom="10sp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/products"
@@ -30,7 +33,7 @@
         android:layout_height="wrap_content"
 
         app:layout_constraintEnd_toEndOf="parent"
-
+        android:layout_marginTop="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryRecycler" />
 
