--- a/app/src/main/res/layout/activity_catalog.xml
+++ b/app/src/main/res/layout/activity_catalog.xml
@@ -9,8 +9,6 @@
     android:layout_marginBottom="0sp"
     tools:context=".Catalog">
 
-
-
     <SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
@@ -30,11 +28,22 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/products"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="520sp"
+
+        android:layout_marginTop="10sp"
+
 
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="10sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/categoryRecycler" />
+
+    <Button
+        android:id="@+id/buttonCart"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="Перейти в корзину"
+        app:layout_constraintBottom_toBottomOf="parent"
+         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
