--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -11,6 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200sp"
+        android:layout_marginTop="10sp"
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/imageViewProduct"/>
 
@@ -49,7 +50,7 @@
         android:id="@+id/buttonAddToCart"
         android:text="Добавить в корзину"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />
+         />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
